[gd_scene load_steps=10 format=3 uid="uid://dov8cv8xgk7m5"]

[ext_resource type="Material" uid="uid://bjs63iorfjn6a" path="res://materiales/mat_brown.tres" id="1_8xjrf"]
[ext_resource type="Script" path="res://scripts/interactable.gd" id="1_gh4ye"]
[ext_resource type="Script" path="res://scripts/highlight.gd" id="2_8oy2h"]

[sub_resource type="Environment" id="Environment_hu4fh"]
background_mode = 1
background_color = Color(0.63, 0.462, 0.315, 1)
tonemap_mode = 1
fog_light_energy = 1.51

[sub_resource type="BoxShape3D" id="BoxShape3D_7sh10"]

[sub_resource type="BoxMesh" id="BoxMesh_wkg5b"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mlimw"]

[sub_resource type="PlaneMesh" id="PlaneMesh_u7ypg"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_f2yag"]

[node name="Scene - Main game" type="Node3D"]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.79653, 0.604599, 0, -0.604599, 0.79653, -0.973457, 3.90487, 4.08787)
environment = SubResource("Environment_hu4fh")
current = true
fov = 100.0
near = 0.001
far = 100.0

[node name="Game UI" type="CanvasLayer" parent="."]

[node name="Interactables" type="Node3D" parent="."]

[node name="Area3D" type="Area3D" parent="Interactables"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00666046, 2.00542, -0.00475085)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Interactables/Area3D"]
shape = SubResource("BoxShape3D_7sh10")
script = ExtResource("1_gh4ye")
_ingredient = 16

[node name="MeshInstance3D" type="MeshInstance3D" parent="Interactables/Area3D"]
mesh = SubResource("BoxMesh_wkg5b")
surface_material_override/0 = SubResource("StandardMaterial3D_mlimw")
script = ExtResource("2_8oy2h")

[node name="Floor" type="MeshInstance3D" parent="."]
transform = Transform3D(9.97058, 0, 0, 0, 0.997058, 0, 0, 0, 9.97058, 0, 0, 0)
material_override = ExtResource("1_8xjrf")
mesh = SubResource("PlaneMesh_u7ypg")
surface_material_override/0 = SubResource("StandardMaterial3D_f2yag")

[connection signal="input_event" from="Interactables/Area3D" to="Interactables/Area3D/CollisionShape3D" method="_on_area_3d_input_event"]
[connection signal="mouse_entered" from="Interactables/Area3D" to="Interactables/Area3D/CollisionShape3D" method="_on_area_3d_mouse_entered"]
[connection signal="mouse_exited" from="Interactables/Area3D" to="Interactables/Area3D/CollisionShape3D" method="_on_area_3d_mouse_exited"]
[connection signal="clicked" from="Interactables/Area3D/CollisionShape3D" to="Interactables/Area3D/MeshInstance3D" method="_on_collision_shape_3d_clicked"]
[connection signal="enter" from="Interactables/Area3D/CollisionShape3D" to="Interactables/Area3D/MeshInstance3D" method="_on_collision_shape_3d_enter"]
[connection signal="exit" from="Interactables/Area3D/CollisionShape3D" to="Interactables/Area3D/MeshInstance3D" method="_on_collision_shape_3d_exit"]
